feat: add male2female64 dataset to cycleGAN

--- a/CycleGAN.ipynb
+++ b/CycleGAN.ipynb
@@ -51,7 +51,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = \"apple2orange64\""
+    "dataset = \"apple2orange64\"\n",
+    "# dataset = \"male2female64\""
    ]
   },
   {
@@ -120,8 +121,8 @@
     "n_cpu = 8               # number of cpu threads to use during batch generation\n",
     "sample_interval = 200   # interval between image samples\n",
     "checkpoint_interval = 1 # interval between batches for saving model checkpoints\n",
-    "lambda_id = 5.0         # identity loss weight\n",
-    "lambda_cyc = 10.0       # cycle loss weight\n",
+    "lambda_id = 1.0         # identity loss weight\n",
+    "lambda_cyc = 2.0       # cycle loss weight\n",
     "if model == \"fdcgan\":\n",
     "    lambda_id = 1.0 \n",
     "    lambda_cyc = 2.0 "
@@ -141,6 +142,11 @@
    "outputs": [],
    "source": [
     "if dataset == \"apple2orange64\":\n",
+    "    batch_size = 4      # size of the batches\n",
+    "    img_size = 64       # size of each image dimension\n",
+    "    channels = 3        # rgb\n",
+    "\n",
+    "elif dataset == \"male2female64\":\n",
     "    batch_size = 4      # size of the batches\n",
     "    img_size = 64       # size of each image dimension\n",
     "    channels = 3        # rgb\n",
@@ -421,7 +427,7 @@
     "if dataset == \"apple2orange64\":\n",
     "\n",
     "    import subprocess\n",
-    "    command = \"bash ./datasets/download_cyclegan_dataset.sh\"\n",
+    "    command = \"bash ./datasets/download_cyclegan_dataset.sh apple2orange64\"\n",
     "    subprocess.run(command, shell=True)\n",
     "\n",
     "    dataloader = torch.utils.data.DataLoader(\n",
@@ -439,6 +445,26 @@
     "        num_workers=1,\n",
     "    )\n",
     "\n",
+    "elif dataset == \"male2female64\":\n",
+    "\n",
+    "    import subprocess\n",
+    "    command = \"bash ./datasets/download_cyclegan_dataset.sh male2female64\"\n",
+    "    subprocess.run(command, shell=True)\n",
+    "\n",
+    "    dataloader = torch.utils.data.DataLoader(\n",
+    "        ImageDataset(\"./datasets/male2female64\", transforms_=transforms_, unaligned=True, mode=\"train\"),\n",
+    "        batch_size=batch_size,\n",
+    "        shuffle=True,\n",
+    "        num_workers=n_cpu,\n",
+    "    )\n",
+    "\n",
+    "    # Test data loader\n",
+    "    val_dataloader = DataLoader(\n",
+    "        ImageDataset(\"./datasets/male2female64\", transforms_=transforms_, unaligned=True, mode=\"validation\"),\n",
+    "        batch_size=5,\n",
+    "        shuffle=True,\n",
+    "        num_workers=1,\n",
+    "    )\n",
     "def sample_images(batches_done):\n",
     "    \"\"\"Saves a generated sample from the test set\"\"\"\n",
     "    imgs = next(iter(val_dataloader))\n",
