feat: add inference notebook, add test in classifier notebook

--- a/CycleGAN.ipynb
+++ b/CycleGAN.ipynb
@@ -34,8 +34,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# model = \"fdcgan\"\n",
-    "model = \"resnet\""
+    "model = \"fdcgan\"\n",
+    "# model = \"resnet\""
    ]
   },
   {
