--- a/GANs.ipynb
+++ b/GANs.ipynb
@@ -123,7 +123,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "start_epoch = 0         # epoch to start training from\n",
+    "start_epoch = 1         # epoch to start training from\n",
     "n_epochs = 200          # number of epochs of training\n",
     "decay_epoch = 100        # epoch from which to start lr decay\n",
     "n_cpu = 8               # number of cpu threads to use during batch generation\n",
@@ -558,7 +558,7 @@
     "        if checkpoint_interval != -1 and epoch % checkpoint_interval == 0:\n",
     "            # Save model checkpoints\n",
     "            torch.save(generator.state_dict(), \"saved_models/%s/%s/generator_%d.pth\" % (model, dataset, epoch))\n",
-    "            torch.save(discriminator.state_dict(), \"saved_models/%s/%s/generator_%d.pth\" % (model, dataset, epoch))\n",
+    "            torch.save(discriminator.state_dict(), \"saved_models/%s/%s/discriminator_%d.pth\" % (model, dataset, epoch))\n",
     "                    "
    ]
   },
@@ -643,7 +643,7 @@
     "        if checkpoint_interval != -1 and epoch % checkpoint_interval == 0:\n",
     "            # Save model checkpoints\n",
     "            torch.save(generator.state_dict(), \"saved_models/%s/%s/generator_%d.pth\" % (model, dataset, epoch))\n",
-    "            torch.save(discriminator.state_dict(), \"saved_models/%s/%s/generator_%d.pth\" % (model, dataset, epoch))\n",
+    "            torch.save(discriminator.state_dict(), \"saved_models/%s/%s/discriminator_%d.pth\" % (model, dataset, epoch))\n",
     "                    "
    ]
   },
@@ -746,7 +746,7 @@
     "        if checkpoint_interval != -1 and epoch % checkpoint_interval == 0:\n",
     "            # Save model checkpoints\n",
     "            torch.save(generator.state_dict(), \"saved_models/%s/%s/generator_%d.pth\" % (model, dataset, epoch))\n",
-    "            torch.save(discriminator.state_dict(), \"saved_models/%s/%s/generator_%d.pth\" % (model, dataset, epoch))\n"
+    "            torch.save(discriminator.state_dict(), \"saved_models/%s/%s/discriminator_%d.pth\" % (model, dataset, epoch))\n"
    ]
   }
  ],
