--- a/apple_orange_classifier.ipynb
+++ b/apple_orange_classifier.ipynb
@@ -11,6 +11,7 @@
     "import torch\n",
     "from torch.utils.data import Dataset, DataLoader\n",
     "from torchvision import transforms\n",
+    "import torchvision.datasets as datasets\n",
     "from PIL import Image\n",
     "from sklearn.metrics import accuracy_score, ConfusionMatrixDisplay\n",
     "\n",
@@ -159,6 +160,73 @@
     "\n",
     "ConfusionMatrixDisplay.from_predictions(y_test, y_test_pred)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# --- Test the model after training\n",
+    "\n",
+    "test_data_loader = DataLoader(test_dataset, batch_size=1, shuffle=False)\n",
+    "\n",
+    "\n",
+    "y_test_pred = []\n",
+    "y_test = []\n",
+    "for i, batch in enumerate(test_data_loader):\n",
+    "    x_test_img, y_test_ = batch\n",
+    "    y_test_pred.append(model(x_test_img).argmax(dim=1).item())\n",
+    "    y_test.append(y_test_.item())\n",
+    "\n",
+    "accuracy = accuracy_score(y_test, y_test_pred)\n",
+    "print(f\"{accuracy = }\")\n",
+    "\n",
+    "ConfusionMatrixDisplay.from_predictions(y_test, y_test_pred)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Import Data to Classify**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# input_dataset_folder = \"inferences/fdcgan/\"\n",
+    "input_dataset_folder = \"inferences/cycle-gan/fdcgan/\"\n",
+    "\n",
+    "input_dataset = classifier_data.BinaryClassificationImageDataset(\n",
+    "    input_dataset_folder,\n",
+    "    transformations=transformations,\n",
+    "    mode=\"apple2orange64\"\n",
+    ")\n",
+    "\n",
+    "input_dataset_loader = DataLoader(input_dataset, batch_size=1, shuffle=False)\n",
+    "print(f\"Number of images: {len(input_dataset)}\")\n",
+    "print(type(input_dataset_loader))\n",
+    "# x_test_img, y_test = next(iter(input_dataset_loader))\n",
+    "\n",
+    "y_test_pred = []\n",
+    "y_test = []\n",
+    "for i, batch in enumerate(input_dataset_loader):\n",
+    "    x_test_img, y_test_ = batch\n",
+    "    y_test_pred.append(model(x_test_img).argmax(dim=1).item())\n",
+    "    y_test.append(y_test_.item())\n",
+    "\n",
+    "# with torch.no_grad():\n",
+    "#     y_test_pred = model(x_test_img).argmax(dim=1)\n",
+    "\n",
+    "accuracy = accuracy_score(y_test, y_test_pred)\n",
+    "print(f\"{accuracy = }\")\n",
+    "\n",
+    "ConfusionMatrixDisplay.from_predictions(y_test, y_test_pred)"
+   ]
   }
  ],
  "metadata": {
@@ -177,7 +245,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.8.19"
   }
  },
  "nbformat": 4,
