--- a/apple_orange_classifier.ipynb
+++ b/apple_orange_classifier.ipynb
@@ -205,9 +205,11 @@
     "    input_dataset_folder,\n",
     "    transformations=transformations,\n",
     "    mode=\"apple2orange64\"\n",
+    "    # mode=\"orange2apple64\"\n",
     ")\n",
     "\n",
     "input_dataset_loader = DataLoader(input_dataset, batch_size=1, shuffle=False)\n",
+    "\n",
     "print(f\"Number of images: {len(input_dataset)}\")\n",
     "print(type(input_dataset_loader))\n",
     "# x_test_img, y_test = next(iter(input_dataset_loader))\n",
