feat: move models implementations to a folder

--- a/CycleGAN.ipynb
+++ b/CycleGAN.ipynb
@@ -180,13 +180,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from discriminator import Discriminator # Discriminator similar to the one in the original paper, uses MSE loss\n",
+    "from models.discriminator import Discriminator # Discriminator similar to the one in the original paper, uses MSE loss\n",
     "\n",
     "if model == \"fdcgan\" or model == \"resnet\":\n",
     "    if model == \"fdcgan\":\n",
-    "        from fdcgan import Generator, weights_init_normal\n",
+    "        from models.fdcgan import Generator, weights_init_normal\n",
     "    elif model == \"resnet\":\n",
-    "        from resnet import Generator, weights_init_normal\n",
+    "        from models.resnet import Generator, weights_init_normal\n",
     "        n_residual_blocks = 9\n",
     "\n",
     "else:\n",
