--- a/GANs.ipynb
+++ b/GANs.ipynb
@@ -189,22 +189,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from discriminator import Discriminator # Discriminator similar to the one in the original paper, uses MSE loss\n",
+    "from models.discriminator import Discriminator # Discriminator similar to the one in the original paper, uses MSE loss\n",
     "\n",
     "if model == \"gan\":\n",
-    "    from gan import Generator\n",
+    "    from models.gan import Generator\n",
     "    \n",
     "elif model == \"dcgan\":\n",
-    "    from dcgan import Generator, weights_init_normal\n",
+    "    from models.dcgan import Generator, weights_init_normal\n",
     "\n",
     "elif model == \"fdcgan\" or model == \"resnet\":\n",
     "    lambda_id = 5.0\n",
     "    if dataset not in [\"apple2orange64\", \"orange2apple64\"]:\n",
     "        raise Exception(f\"Dataset {dataset} has no input image for the generator\")\n",
     "    if model == \"fdcgan\":\n",
-    "        from fdcgan import Generator, weights_init_normal\n",
+    "        from models.fdcgan import Generator, weights_init_normal\n",
     "    elif model == \"resnet\":\n",
-    "        from resnet import Generator, weights_init_normal\n",
+    "        from models.resnet import Generator, weights_init_normal\n",
     "        n_residual_blocks = 9\n",
     "\n",
     "else:\n",
