--- a/Inference.ipynb
+++ b/Inference.ipynb
@@ -237,18 +237,18 @@
    "outputs": [],
    "source": [
     "if model == \"gan\":\n",
-    "    from gan import Generator\n",
+    "    from models.gan import Generator\n",
     "    \n",
     "elif model == \"dcgan\":\n",
-    "    from dcgan import Generator\n",
+    "    from models.dcgan import Generator\n",
     "\n",
     "elif model == \"fdcgan\" or model == \"resnet\":\n",
     "    if dataset not in [\"apple2orange64\", \"orange2apple64\", \"custom\"]:\n",
     "        raise Exception(f\"Dataset {dataset} has no input image for the generator\")\n",
     "    if model == \"fdcgan\":\n",
-    "        from fdcgan import Generator\n",
+    "        from models.fdcgan import Generator\n",
     "    elif model == \"resnet\":\n",
-    "        from resnet import Generator\n",
+    "        from models.resnet import Generator\n",
     "        n_residual_blocks = 9\n",
     "\n",
     "else:\n",
@@ -646,14 +646,12 @@
     "        if dataset == \"custom\":\n",
     "            x, y = batch\n",
     "            x = x.to(device)\n",
-    "            # batch_tensor = torch.stack(x)\n",
     "            real_A = Variable(x)\n",
     "        else:\n",
     "            x, y = batch\n",
     "            if (y != my_class_A):\n",
     "                continue\n",
     "            x = x.to(device)\n",
-    "            # batch_tensor = torch.stack(x)\n",
     "            real_A = Variable(x)\n",
     "\n",
     "        # ------------------\n",
