--- a/inferance_on_selected_examples.ipynb
+++ b/inferance_on_selected_examples.ipynb
@@ -116,12 +116,12 @@
     "model_save_dir = os.path.join(\".\", \"saved_models\", \"cycle-gan\", model_dir_name, dataset_name)\n",
     "\n",
     "if model_name == \"fdcgan\":\n",
-    "    from fdcgan import Generator\n",
+    "    from models.fdcgan import Generator\n",
     "    g_ab = Generator(img_shape)\n",
     "    g_ba = Generator(img_shape)\n",
     "\n",
     "elif model_name == \"resnet\":\n",
-    "    from resnet import Generator\n",
+    "    from models.resnet import Generator\n",
     "    g_ab = Generator(img_shape, num_residual_blocks=9)\n",
     "    g_ba = Generator(img_shape, num_residual_blocks=9)\n",
     "\n",
